# Plugalyzer

./: CMakeLists.txt
Automation/: main.cpp
Automation/Tester/: Tester.cpp  Tester.h
Source/: Utils.cpp
